@@ -181,7 +181,7 @@ If the system call failed, an exception will be thrown with the error code set t
 
 =head2 recv
 
-  static method recv : int ($sockfd : int, $buf : mutable string, $len : int, $flags : int);
+  static method recv : int ($sockfd : int, $buf : mutable string, $len : int, $flags : int, $buf_offset = 0 : int);
 
 The recv() call is normally used only on a connected socket (see connect(2)) and is identical to recvfrom() with a NULL src_addr argument.
 
@@ -193,7 +193,7 @@ If the system call failed, an exception will be thrown with the error code set t
 
 =head2 send
 
-  static method send : int ($sockfd : int, $buf : string, $len : int, $flags : int);
+  static method send : int ($sockfd : int, $buf : string, $len : int, $flags : int, $buf_offset = 0 : int);
 
 The send() call may be used only when the socket is in a connected state (so that the intended recipient is known). The only difference between send() and write(2) is the presence of flags. With a zero flags argument, send() is equivalent to write(2). Also, the following call
 
